objects/ASI_KOR_Stock_In_Trade__c.object
<CustomObject>
    <fields>
        <fullName>ASI_KOR_Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                    <default>true</default>
                    <label>January</label>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_Month__c</fullName>
        <formula>if(TEXT( ASI_KOR_Month__c)=&quot;January&quot;, &quot;01&quot;,
	if(TEXT( ASI_KOR_Month__c)=&quot;February&quot;,&quot;02&quot;,
		if(TEXT( ASI_KOR_Month__c)=&quot;March&quot;,&quot;03&quot;,
		if(TEXT( ASI_KOR_Month__c)=&quot;April&quot;,&quot;04&quot;,
			if(TEXT( ASI_KOR_Month__c)=&quot;May&quot;,&quot;05&quot;,
				if(TEXT( ASI_KOR_Month__c)=&quot;June&quot;,&quot;06&quot;,
					if(TEXT( ASI_KOR_Month__c)=&quot;July&quot;,&quot;07&quot;,
						if(TEXT( ASI_KOR_Month__c)=&quot;August&quot;,&quot;08&quot;,
							if(TEXT( ASI_KOR_Month__c)=&quot;September&quot;,&quot;09&quot;,
								if(TEXT( ASI_KOR_Month__c)=&quot;October&quot;,&quot;10&quot;,
									if(TEXT( ASI_KOR_Month__c)=&quot;November&quot;,&quot;11&quot;,
											if(TEXT( ASI_KOR_Month__c)=&quot;December&quot;,&quot;12&quot;,&quot;XX&quot;))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS_Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_Period_Code__c</fullName>
        <formula>ASI_KOR_Year__c + ASI_KOR_SYS_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS_Period_Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Editable</fullName>
                    <default>true</default>
                    <label>Editable</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Sys_Stock_in_trade_header_ID__c</fullName>
        <externalId>true</externalId>
        <label>Sys_Stock_in_trade_header_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_KOR_Sys_YearMonthNumber__c</fullName>
        <formula>VALUE( ASI_KOR_Year__c ) * 100
 + CASE( ASI_KOR_Month__c 
 , &quot;January&quot;, 1
 , &quot;February&quot;, 2
 , &quot;March&quot;, 3
 , &quot;April&quot;, 4
 , &quot;May&quot;, 5
 , &quot;June&quot;, 6
 , &quot;July&quot;, 7
 , &quot;August&quot;, 8
 , &quot;September&quot;, 9
 , &quot;October&quot;, 10
 , &quot;November&quot;, 11
 , &quot;December&quot;, 12
 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sys_YearMonthNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Wholesaler__c</fullName>
        <label>Wholesaler</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stock-In Trade Entries</relationshipLabel>
        <relationshipName>Stock_In_Trades</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Year__c</fullName>
        <defaultValue>TEXT(YEAR(TODAY()))</defaultValue>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Stock-In Trade Entry</label>
    <listViews>
        <fullName>All_Stock_in_Trade</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Wholesaler__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ASI_KOR_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Stock_In_Trade</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Wholesaler__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ASI_KOR_Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Stock-In Trade</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Stock_In_Trade_YYYYMM</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Wholesaler__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ASI_KOR_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>September,October</value>
        </filters>
        <label>My Stock-In Trade - YYYYMM</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SIT-{00000}</displayFormat>
        <label>Stock-In Trade Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock-In Trade Entries</pluralLabel>
    <recordTypes>
        <fullName>ASI_KOR_SIT_Editable</fullName>
        <active>true</active>
        <label>ASI KOR SIT (Editable)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_KOR_SIT_Locked</fullName>
        <active>true</active>
        <label>ASI KOR SIT (Locked)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_KOR_YearValidation</fullName>
        <active>true</active>
        <description>Check the format of year</description>
        <errorConditionFormula>NOT( ISNUMBER( ASI_KOR_Year__c ) )
 || CEILING( VALUE( ASI_KOR_Year__c ) ) != VALUE( ASI_KOR_Year__c )
 || VALUE( ASI_KOR_Year__c ) &lt;= 1000
 || VALUE( ASI_KOR_Year__c ) &gt;= 10000</errorConditionFormula>
        <errorDisplayField>ASI_KOR_Year__c</errorDisplayField>
        <errorMessage>Invalid Year</errorMessage>
    </validationRules>
</CustomObject>